build/k8s/api-config.yml
# API deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
        - name: api
          image: dnilosek/fib-overkill-api
          ports:
            - containerPort: 5000
---
# Cluster IP service for API
apiVersion: v1
kind: Service
metadata:
  name: api-clusterip-service
spec:
  type: ClusterIP
  selector:
    component: api
  ports:
    - port: 5000
      targetPort: 5000
