build/k8s/ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - fibcalc.nilosek.io
      secretName: fib-overkill-io
  rules:
    - host: fibcalc.nilosek.io
      http:
        paths:
          - path: /
            backend:
              serviceName:  web-clusterip-service
              servicePort: 3000
          - path: /api
            backend:
              serviceName: api-clusterip-service
              servicePort: 5000
